--- a/src/shim_canvas2d.html
+++ b/src/shim_canvas2d.html
@@ -146,7 +146,7 @@
   <script type="text" id="entry">
     // Your entry goes here 👇
     // =======================
-    /*inject: ../build/min.js*/
+    /*inject: ../dist/min.js*/
     // =======================
   </script>
 </body>
